--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "@react-three/fiber": "8.16",
     "react": "18.3",
     "react-dom": "18.3",
+    "react-router-dom": "6.26.1",
+    "react-router-hash-link": "^2.4.3",
     "three": "^0.166.1"
   }
 }
