--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "devDependencies": {
     "@vitejs/plugin-react": "4.3",
+    "gh-pages": "^6.3.0",
     "vite": "^5.3.3",
     "vite-plugin-restart": "^0.4.1"
   },
